# podcast-transcribe-chinese

./: .dockerignore  .gitignore  Dockerfile  app.py  db.py  pyproject.toml
.github/workflows/: deploy.yml
graph/: graph.py  progress.py  state.py
graph/nodes/: assemblyai_asr.py  elevenlabs_tts.py  group_utterances.py  prepare_dialogue.py  translate_group.py
static/: index.html  player.html
tests/: test_assemblyai_asr.py  test_elevenlabs_tts.py  test_group_utterances.py  test_merge_mp3.py  test_prepare_dialogue.py  test_translate_group.py
tests/outputs/: assemblyai_asr_output.json  group_utterances_output.json  prepare_dialogue_output.json  translate_group_output.json
